Comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Título do Site</title>
 </head>
+
 <body>
     <main>
         <header>
-            <h1></h1>
+            <h1>Cursos Grátis!</h1>
         </header>
         <article>
-            <h2>Artigo 01</h2>
-            <p>Texto Artigo 01</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere repudiandae error quia voluptatem illo
+                velit, voluptatum, vitae reprehenderit tempora quod qui, libero deserunt doloremque voluptate tempore
+                suscipit animi fugiat dolore?</p>
         </article>
         <article>
-            <h2>Artigo 02</h2>
-            <p>Texto Artigo 02</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus provident odio vero praesentium?
+                Itaque, dignissimos? Qui mollitia corporis fuga iusto facilis, placeat nihil aliquam. Quidem asperiores
+                ipsa dolores tempore vero?</p>
         </article>
     </main>
 </body>
+
 </html>
