--- a/index.html
+++ b/index.html
@@ -11,19 +11,25 @@
 <body>
     <main>
         <header>
-            <h1>Cursos Grátis!</h1>
+            <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere repudiandae error quia voluptatem illo
-                velit, voluptatum, vitae reprehenderit tempora quod qui, libero deserunt doloremque voluptate tempore
-                suscipit animi fugiat dolore?</p>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de
+                sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página
+                Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um
+                site vai ter.</p>
+            <p><a href="curso HTML.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus provident odio vero praesentium?
-                Itaque, dignissimos? Qui mollitia corporis fuga iusto facilis, placeat nihil aliquam. Quidem asperiores
-                ipsa dolores tempore vero?</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a
+                interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e
+                dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
+            <p><a href="curso JS.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
